# guyos

./: .gitignore  GUYOS_CORE_SPIKE_REFACTOR_TASKS.md  build-ios.sh
GuyOS/GuyOS/: ContentView.swift  GuyOSApp.swift  JoinChatView.swift  QRCodeScannerSheet.swift
GuyOS/GuyOS.xcodeproj/: project.pbxproj
GuyOSClient/: Package.swift
docs/: overview.md  ticket-profile-registry.json
docs/adr/: 0001-repository-and-package-strategy.md  0002-hexagonal-boundaries-and-ownership.md  0003-wire-protocol-and-compatibility.md  0004-ticket-profiles-and-reference-profile.md
docs/fixtures/: 0004-ticket-profile-reference-v1.json
docs/planning/: adr-0003-error-handling-optional-signals-limits.md  adr-0003-guyos-publisher-observer-fan-out.md  adr-0003-guyos-wire-attach-negotiation-rules.md  (+5 more)
guyos_core/: .gitignore  Cargo.toml
guyos_core/src/: error.rs  lib.rs  llm.rs  main.rs
guyos_core/src/adapters/: mod.rs
guyos_core/src/adapters/inbound/: chat.rs  mod.rs
guyos_core/src/adapters/outbound/: iroh_gossip_relay_backend.rs  mod.rs
guyos_core/src/application/: client_chat_service.rs  mod.rs
guyos_core/src/domain/: guyos_wire_attach.rs  guyos_wire_publish.rs  guyos_wire_v1.rs  mod.rs  reference_ticket_v1.rs
guyos_core/src/infrastructure/: mod.rs
guyos_core/src/ports/: mod.rs
guyos_core/src/ports/inbound/: hub_client_session.rs  mod.rs
guyos_core/src/ports/outbound/: f1_framing.rs  fake_guyos_wire_v1_session.rs  fake_relay_chat_backend.rs  guyos_wire_v1_session.rs  mod.rs  relay_chat_backend.rs
guyos_core/tests/: layer_policy.rs  reference_ticket_v1_conformance.rs
(+4 files in other folders)
