[package]
name = "guyos_core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "guyos_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
data-encoding = "2.11.0"
bytes = "1.10.1"
futures-lite = "2.6.1"
iroh = "0.98.2"
iroh-gossip = "0.98.0"
qrcode = "0.14.1"
rand = "0.10.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.52.1"
uniffi = { version = "0.31", features = ["tokio", "cli"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }
